[tool.poetry]
name = "fermax-blue-intercom"
version = "0.1.0"
description = "Fermax Blue Intercom library and command line utility"
authors = [
    "Marcos <marcosav2010@gmail.com>",
    "Marcin Jaworski <marcin@jaworski.me>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
anyio = "^3.7.0"
httpx = "^0.24.1"
typing-extensions = "^4.6.3"
pydantic = "^1.10.9"
platformdirs = { version = "^3.5.1", optional = false }
typer = { version = "^0.9.0", optional = false }
click = {version = "^8.1.3", optional = false }

[tool.poetry.scripts]
fermax-blue-intercom = { callable = "fermax_blue_intercom:cli" }

[tool.poetry.extras]
#cli = ["typer", "click", "platformdirs"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
